--- a/myblog/src/main/resources/application.properties
+++ b/myblog/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/myblog
-spring.datasource.username=root
-spring.datasource.password=parol123
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
